# cava-viz

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  install.sh  install_debian.sh  install_linux.sh  uninstall_debian.sh  uninstall_linux.sh  visualizer.cpp
.github/workflows/: build-and-test.yml  ci.yml  clang-format  clang-tidy  lint.yml  release.yml
cava-viz/: CMakeLists.txt  PKGBUILD  install.sh  uninstall.sh
cava-viz/src/: config.h  fft_processor.cpp  fft_processor.h  main.cpp  pipewire_capture.cpp  pulse_capture.cpp  pulse_capture.h  renderer.cpp  renderer.h
src/: CMakeLists.txt  app.cpp  app.h  audio_capture.h  audio_utils.cpp  audio_utils.h  bar_mode.cpp  bar_mode.h  bar_output.cpp  bar_output.h  config.cpp  config.h  fft_processor.cpp  fft_processor.h  main.cpp  pipewire_capture.cpp  pipewire_capture.h  pulse_capture.cpp  pulse_capture.h  renderer.cpp  renderer.h  user_theme.cpp  user_theme.h
tests/: test_bar_output.cpp
